<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBall_ScoreIt</string>
    <string name="login_welcome_text">Welcome to BBall-ScoreIt!</string>
    <string name="login_login_text">Login to begin</string>
	<string name="login_username_hint">Username</string>
	<string name="login_password_hint">Password</string>
	<string name="login_btn_text">Submit</string>
	<string name="login_remember_text">Remember Me</string>
	<string name="score_game_court_desc">Basketball Court</string>
	<string name="score_game_official_txt">Official</string>
	<string name="score_game_stats_txt">Stats</string>
	<string name="score_game_action_txt">Action</string>
	<string name="score_game_start_score">0</string>
	<string name="score_game_start_period">Start 1st</string>
	<string name="away_txt">AWAY</string>
	<string name="home_txt">HOME</string>
	<string name="at_txt">AT</string>
	<string name="fast_break">Fastbreak?</string>
	<string name="goaltending">Goaltending?</string>
	<string name="ejected">Ejected?</string>
	<string name="assisted">Assisted?</string>
	<string name="blocked">Blocked?</string>
	<string name="forced">Forced?</string>
	<string name="drawn">Drawn by other player?</string>
	<string name="submit_txt">Submit</string>
	<string name="shot_type_prompt">Select Shot Type</string>
	<string name="assisted_player_prompt">Select Assisting Player</string>
	<string name="blocked_player_prompt">Select Blocking Player</string>
	<string name="sub_prompt">Select Incoming Player</string>
	<string name="away_jump_prompt">Select Away Jumper</string>
	<string name="home_jump_prompt">Select Home Jumper</string>
	<string name="jump_winner_prompt">Select Jump Winner</string>
	<string name="drawn_prompt">Drawn by</string>
	<string name="reb_prompt">Select Rebound Type</string>
	<string name="turnover_prompt">Select Turnover Type</string>
	<string name="foul_prompt">Select Foul Type</string>
	<string name="forced_prompt">Select Forcing Player</string>
	<string-array name="shot_types">
	    <item>3pt jump-shot</item>
	    <item>2pt jump-shot</item>
	    <item>layup</item>
	    <item>dunk</item>
	    <item>tip-in</item>
	    <item>free-throw</item>
	</string-array>
	<string-array name="reb_types">
	    <item>offensive</item>
	    <item>defensive</item>
	</string-array>
	<string-array name="turnover_types">
	    <item>traveling</item>
	    <item>lost-ball</item>
	    <item>offensive-foul</item>
	    <item>out-of-bounds</item>
	    <item>violation</item>
	    <item>offensive-goaltending</item>
	    <item>thrown-away</item>
	</string-array>
	<string-array name="foul_types">
	    <item>blocking</item>
	    <item>charging</item>
	    <item>shooting</item>
	    <item>offensive</item>
	    <item>personal</item>
	    <item>technical</item>
	    <item>flagrant</item>
	</string-array>
</resources>