<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foul_prompt"
        android:textColor="#FFFFFF"/>
    <Spinner 
        android:id="@+id/foul_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/foul_types"
        android:prompt="@string/foul_prompt"/>
    <CheckBox 
        android:id="@+id/foul_ejected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/ejected"/>
    <CheckBox 
        android:id="@+id/foul_drawn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/drawn"/>
    <TextView 
        android:id="@+id/foul_drawn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawn_prompt"
        android:textColor="#FFFFFF"
        android:visibility="gone" />
    <Spinner 
        android:id="@+id/foul_drawn_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/drawn_prompt"
        android:visibility="gone"/>
    <Button
        android:id="@+id/foul_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_txt" />

</LinearLayout>