<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shot_type_prompt"
        android:textColor="#FFFFFF"/>
    <Spinner 
        android:id="@+id/missed_shot_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/shot_types"
        android:prompt="@string/shot_type_prompt"/>
    <CheckBox 
        android:id="@+id/missed_shot_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/fast_break"/>
    <CheckBox 
        android:id="@+id/missed_shot_blocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/blocked"/>
    <TextView 
        android:id="@+id/missed_shot_blocked_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blocked_player_prompt"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>
    <Spinner 
        android:visibility="gone"
        android:id="@+id/missed_shot_blocked_spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/blocked_player_prompt"/>
    <Button
        android:id="@+id/missed_shot_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_txt" />"

</LinearLayout>