<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/away_jump_prompt"
        android:textColor="#FFFFFF"/>
    
    <Spinner 
        android:id="@+id/jump_away_jumper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/away_jump_prompt"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_jump_prompt"
        android:textColor="#FFFFFF"/>
    
    <Spinner 
        android:id="@+id/jump_home_jumper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/home_jump_prompt"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jump_winner_prompt"
        android:textColor="#FFFFFF"/>
    
    <Spinner 
        android:id="@+id/jump_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/jump_winner_prompt"/>
    
    <Button
        android:id="@+id/jump_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_txt" />

</LinearLayout>